--- a/projects/widget/src/app/app.component.html
+++ b/projects/widget/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
   <h1>Carlo Gino</h1>
 </div>
+<wdgt-widget-toolbar></wdgt-widget-toolbar>
+<wdgt-widget-space></wdgt-widget-space>
+
 <router-outlet></router-outlet>
