--- a/projects/widget/src/styles.scss
+++ b/projects/widget/src/styles.scss
@@ -2,3 +2,12 @@
 @import '~normalize.css';
 
 @import '../../styles/main';
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
