--- a/projects/widget/src/app/widget-toolbar/widget-toolbar.component.html
+++ b/projects/widget/src/app/widget-toolbar/widget-toolbar.component.html
@@ -1,12 +1,12 @@
 <div class="example-container">
-  <h2>To do</h2>
+  <h2>Widget List</h2>
 
   <div
     cdkDropList
-    [cdkDropListData]="todo"
+    [cdkDropListData]="availableWidgets"
     [cdkDropListConnectedTo]="['widget-space']"
     class="example-list"
   >
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{ item }}</div>
+    <div class="example-box" *ngFor="let item of availableWidgets" cdkDrag>{{ item }}</div>
   </div>
 </div>
