--- a/projects/widget/src/app/widget-space/widget-space.component.html
+++ b/projects/widget/src/app/widget-space/widget-space.component.html
@@ -3,11 +3,23 @@
 
   <div
     cdkDropList
-    [cdkDropListData]="done"
+    [cdkDropListData]="widgets"
     id="widget-space"
     class="example-list"
     (cdkDropListDropped)="drop($event)"
   >
-    <div class="example-box" *ngFor="let item of done" cdkDrag>{{ item }}</div>
+    <ng-container *ngFor="let widget of widgets; trackBy: trackByFunction">
+      <div
+        class="example-box"
+        mwlResizable
+        [enableGhostResize]="true"
+        [resizeCursorPrecision]="10"
+        [resizeEdges]="{ bottom: true, right: true, top: true, left: true }"
+        (resizeEnd)="onResizeEnd($event, widget)"
+        [ngStyle]="canvasStyle(widget)"
+      >
+        {{ widget.id }}
+      </div>
+    </ng-container>
   </div>
 </div>
