--- a/projects/widget/src/app/widget-space/widget-space.component.scss
+++ b/projects/widget/src/app/widget-space/widget-space.component.scss
@@ -1,13 +1,8 @@
 .example-container {
   width: 400px;
-  max-width: 100%;
-  margin: 0 25px 25px 0;
-  display: inline-block;
-  vertical-align: top;
 }
 
 .example-list {
-  border: solid 1px #ccc;
   min-height: 60px;
   background: white;
   border-radius: 4px;
@@ -16,17 +11,10 @@
 }
 
 .example-box {
-  padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-  cursor: move;
-  background: white;
-  font-size: 14px;
+  position: relative;
+  background-color: #fd4140;
+  border: solid 1px #121621;
+  color: #121621;
 }
 
 .cdk-drag-preview {
